More //third_party/py packages.

--- a/deeplearning/clgen/models/BUILD
+++ b/deeplearning/clgen/models/BUILD
@@ -23,7 +23,7 @@ py_library(
         "//deeplearning/clgen/proto:model_py_pb2",
         "//lib/labm8:pbutil",
         "//third_party/py/absl",
-        requirement("keras"),
+        "//third_party/py/keras",
         "//third_party/py/tensorflow",
     ],
 )
@@ -49,7 +49,7 @@ py_library(
         "//deeplearning/clgen:errors",
         "//deeplearning/clgen/proto:model_py_pb2",
         "//third_party/py/absl",
-        requirement("humanize"),
+        "//third_party/py/humanize",
         "//third_party/py/numpy",
     ],
 )
@@ -85,9 +85,9 @@ py_library(
         "//lib/labm8:labdate",
         "//lib/labm8:logutil",
         "//lib/labm8:pbutil",
-        requirement("humanize"),
+        "//third_party/py/humanize",
+        "//third_party/py/keras",
         "//third_party/py/numpy",
-        requirement("keras"),
         "//third_party/py/tensorflow",
     ],
 )
@@ -131,7 +131,7 @@ py_library(
         "//lib/labm8:lockfile",
         "//lib/labm8:pbutil",
         "//third_party/py/absl",
-        requirement("humanize"),
+        "//third_party/py/humanize",
         "//third_party/py/numpy",
     ],
 )
@@ -155,7 +155,7 @@ py_library(
         "//lib/labm8:labdate",
         "//lib/labm8:pbutil",
         "//third_party/py/absl",
-        requirement("humanize"),
+        "//third_party/py/humanize",
         "//third_party/py/numpy",
     ],
 )
@@ -195,9 +195,9 @@ py_library(
         "//lib/labm8:logutil",
         "//lib/labm8:pbutil",
         "//third_party/py/absl",
+        "//third_party/py/humanize",
         "//third_party/py/numpy",
-        requirement("humanize"),
-        requirement("progressbar2"),
+        "//third_party/py/progressbar",
         requirement("python-utils"),
         "//third_party/py/tensorflow",
     ],
