--- a/deeplearning/deepsmith/datastores/BUILD
+++ b/deeplearning/deepsmith/datastores/BUILD
@@ -18,8 +18,8 @@ py_binary(
         "//deeplearning/deepsmith:services",
         "//deeplearning/deepsmith/proto:datastore_py_pb2",
         "//lib/labm8:pbutil",
-        requirement("grpcio"),
         "//third_party/py/absl",
+        "//third_party/py/grpcio",
     ],
 )
 
