--- a/lib/labm8/proto/BUILD
+++ b/lib/labm8/proto/BUILD
@@ -7,14 +7,14 @@ py_proto_library(
     name = "lockfile_py_pb2",
     protos = ["lockfile.proto"],
     visibility = ["//lib/labm8:__subpackages__"],
-    deps = [requirement("protobuf")],
+    deps = ["//third_party/py/protobuf"],
 )
 
 py_proto_library(
     name = "logging_py_pb2",
     protos = ["logging.proto"],
     visibility = ["//visibility:public"],
-    deps = [requirement("protobuf")],
+    deps = ["//third_party/py/protobuf"],
 )
 
 py_proto_library(
@@ -22,5 +22,5 @@ py_proto_library(
     testonly = 1,
     protos = ["test_protos.proto"],
     visibility = ["//lib/labm8:__subpackages__"],
-    deps = [requirement("protobuf")],
+    deps = ["//third_party/py/protobuf"],
 )
