--- a/learn/python/BUILD
+++ b/learn/python/BUILD
@@ -1,7 +1,5 @@
 # Learning Python.
 
-load("@requirements//:requirements.bzl", "requirement")
-
 py_test(
     name = "ascii_chart",
     srcs = ["ascii_chart.py"],
@@ -9,7 +7,7 @@ py_test(
     srcs_version = "PY3",
     deps = [
         "//third_party/py/absl",
-        requirement("ascii_art"),
+        "//third_party/py/ascii_art",
         "//third_party/py/pytest",
     ],
 )
