--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -31,6 +31,7 @@ futures==3.1.1
 fuzzywuzzy==0.16.0
 grpcio-tools==1.10.0
 grpcio==1.10.0
+gym==0.10.5
 h5py==2.7.1
 html5lib==1.0.1
 humanize==0.5.1
