Work in progress on envs.

--- a/experimental/compilers/random_opt/BUILD
+++ b/experimental/compilers/random_opt/BUILD
@@ -10,8 +10,35 @@ py_library(
         "//experimental/compilers/random_opt/proto:random_opt_py_pb2",
         "//lib/labm8:crypto",
         "//lib/labm8:labdate",
+        "//lib/labm8:pbutil",
         "//third_party/py/absl",
         "//third_party/py/gym",
+    ],
+)
+
+py_library(
+    name = "envs",
+    srcs = ["envs.py"],
+    deps = [
+        # Note that :env is not directly imported, but required by the gym
+        # registration process.
+        ":env",
+        "//compilers/llvm:opt",
+        "//third_party/py/absl",
+        "//datasets/benchmarks:bzip2",
+        "//datasets/benchmarks:llvm_test_suite",
+        "//experimental/compilers/random_opt/proto:random_opt_py_pb2",
+    ],
+)
+
+py_test(
+    name = "envs_test",
+    srcs = ["envs_test.py"],
+    deps = [
+        ":envs",
+        "//third_party/py/absl",
+        "//third_party/py/gym",
+        "//third_party/py/pytest",
     ],
 )
 
@@ -20,8 +47,7 @@ py_binary(
     srcs = ["random_opt.py"],
     deps = [
         ":env",
-        "//compilers/llvm:opt",
-        "//datasets/benchmarks:bzip2",
+        ":envs",
         "//experimental/compilers/random_opt/proto:random_opt_py_pb2",
         "//lib/labm8:pbutil",
         "//third_party/py/absl",
