--- a/datasets/benchmarks/BUILD
+++ b/datasets/benchmarks/BUILD
@@ -71,7 +71,7 @@ py_test(
     name = "llvm_test_suite_test",
     srcs = ["llvm_test_suite_test.py"],
     deps = [
-        ":llvm_test_suite_test",
+        ":llvm_test_suite",
         "//datasets/benchmarks/proto:benchmarks_py_pb2",
         "//third_party/py/absl",
         "//third_party/py/pytest",
