--- a/learn/docker/bazel/BUILD
+++ b/learn/docker/bazel/BUILD
@@ -5,7 +5,7 @@ load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
 py3_image(
     name = "python_image",
     srcs = ["test.py"],
-    base = "@python3.6//image",
+    base = "@base//image",
     data = [":datafile.txt"],
     main = "test.py",
     deps = [
