Move shell escape codes into labm8.

--- a/lib/labm8/BUILD
+++ b/lib/labm8/BUILD
@@ -435,6 +435,15 @@ py_test(
 )
 
 py_library(
+    name = "shell",
+    srcs = ["shell.py"],
+    visibility = ["//visibility:public"],
+    deps = [
+        "//third_party/py/absl",
+    ],
+)
+
+py_library(
     name = "sqlutil",
     srcs = ["sqlutil.py"],
     visibility = ["//visibility:public"],
