Auto BUILD format.

--- a/util/freefocus/server/BUILD
+++ b/util/freefocus/server/BUILD
@@ -4,7 +4,7 @@ py_binary(
     name = "server",
     srcs = ["server.py"],
     deps = [
-        "//util/freefocus:freefocus",
+        "//util/freefocus",
         "//util/freefocus:sql",
-    ]
+    ],
 )
