--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -34,6 +34,7 @@ fuzzywuzzy==0.16.0
 graphviz==0.9
 grpcio-tools==1.10.0
 grpcio==1.10.0
+gspread==3.0.1
 gym==0.10.5
 h5py==2.7.1
 html5lib==1.0.1
@@ -63,6 +64,7 @@ nbconvert==5.3.1
 nbformat==4.4.0
 notebook==5.4.1
 numpy==1.14.3
+oauth2client==4.1.3
 pandas==0.23.0
 pandocfilters==1.4.2
 parso==0.1.1
